# worldweaver

./: .gitmodules  CMakeLists.txt  main.cpp  worldweaver.cpp  worldweaver.h  worldweaver.ui
code/: CMakeLists.txt
code/inc/worldweaver/: double_slider.h  double_slider.hpp  main_window.h  star.hpp  worldweaver.h
code/src/: double_slider.cpp  main.cpp  main_window.cpp  main_window.ui  star.cpp  worldweaver.cpp  worldweaver.ui
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
